add queries for smaller screens

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- CSS links -->
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/queries.css">
   <!-- JS script -->
   <script src="./js/script.js"></script>
   <!-- Font Awesome script -->
@@ -16,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <header class=page-header>
