--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/queries.css">
   <!-- JS script -->
-  <script src="./js/script.js"></script>
+  <script defer src="./js/script.js"></script>
   <!-- Font Awesome script -->
   <script src="https://kit.fontawesome.com/43727fc40b.js" crossorigin="anonymous"></script>
   <!-- Google Fonts -->
@@ -82,24 +82,24 @@
 
       <label>
         <span class='form-label'>Nome</span>
-        <input type="text" required>
+        <input type="text" name='nome' required>
       </label>
 
       <label>
         <span class='form-label'>Email</span>
-        <input type="email" required>
+        <input type="email" name='email' required>
       </label>
 
       <label>
         <span class='form-label'>Telefone</span>
-        <input type="tel" required>
+        <input type="tel" name='tel' required>
       </label>
 
       <fieldset>
         <legend>Escolha um único curso:</legend>
 
         <div class='form-choice'>
-          <input type="radio" name='course' id='choice1' value='how-to-model-and-make-skirts'>
+          <input type="radio" name='course' id='choice1' value='how-to-model-and-make-skirts' checked>
           <label for="choice1">Como Modelar e Confeccionar Saias</label>
         </div>
 
@@ -121,7 +121,7 @@
 
       <label>
         <span class='form-label'>10 + 5 = ?</span>
-        <input type="number" required>
+        <input type="number" name='validador' required>
       </label>
 
       <button type='submit' class='submit-btn'>ESCOLHER ESSE CURSO</button>
